Fix building hexagon_nn

--- a/mace/flows/CMakeLists.txt
+++ b/mace/flows/CMakeLists.txt
@@ -23,4 +23,7 @@ target_link_libraries(flows PRIVATE core cpu_flow)
 if(MACE_ENABLE_OPENCL)
   target_link_libraries(flows PRIVATE opencl_flow)
 endif(MACE_ENABLE_OPENCL)
+if(MACE_ENABLE_HEXAGON)
+  target_link_libraries(flows PRIVATE hexagon_flow)
+endif(MACE_ENABLE_HEXAGON)
 install(TARGETS flows ARCHIVE DESTINATION lib)
