--- a/mace/runtimes/CMakeLists.txt
+++ b/mace/runtimes/CMakeLists.txt
@@ -23,4 +23,7 @@ target_link_libraries(runtimes PRIVATE core cpu_runtime)
 if(MACE_ENABLE_OPENCL)
   target_link_libraries(runtimes PRIVATE opencl_runtime)
 endif(MACE_ENABLE_OPENCL)
+if(MACE_ENABLE_HEXAGON)
+  target_link_libraries(runtimes PRIVATE hexagon_runtime)
+endif(MACE_ENABLE_HEXAGON)
 install(TARGETS runtimes ARCHIVE DESTINATION lib)
