--- a/mace/runtimes/hexagon/CMakeLists.txt
+++ b/mace/runtimes/hexagon/CMakeLists.txt
@@ -27,5 +27,5 @@ add_library(hexagon_runtime STATIC ${HEXAGON_SRCS})
 if(MACE_ENABLE_OPENCL)
   add_dependencies(hexagon_runtime opencl_clhpp)
 endif(MACE_ENABLE_OPENCL)
-target_link_libraries(hexagon_runtime core)
+target_link_libraries(hexagon_runtime core hexagon_controller)
 install(TARGETS hexagon_runtime ARCHIVE DESTINATION lib)
