--- a/mace/port/CMakeLists.txt
+++ b/mace/port/CMakeLists.txt
@@ -18,6 +18,10 @@ elseif(APPLE)
 elseif(WIN32)
   add_subdirectory(windows)
   add_library(port ALIAS port_windows)
+elseif(QNX)
+  add_subdirectory(posix)
+  add_subdirectory(qnx)
+  add_library(port ALIAS port_qnx)
 else(WIN32)
   add_subdirectory(posix)
   add_subdirectory(linux_base)
