--- a/test/ccbenchmark/CMakeLists.txt
+++ b/test/ccbenchmark/CMakeLists.txt
@@ -1,7 +1,11 @@
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
-if(NOT APPLE)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+if(QNX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lgomp -Wno-error=unknown-pragmas")
+else()
+  if (NOT APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+  endif()
 endif()
 
 file(GLOB MACE_BENCHMARK_TEST_SRCS
