--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,5 @@
 # new CUDA support requires 3.8 for Linux/Mac, and 3.9 for Windows
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
-message("CMAKE_VERSION: ${CMAKE_VERSION}")
-message("CROSSTOOL_ROOT: ${CROSSTOOL_ROOT}")
-message("CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
 project(mace C CXX)
 
 option(MACE_ENABLE_CPU         "whether to enable CPU support"              OFF)
@@ -22,7 +19,29 @@ option(MACE_ENABLE_OBFUSCATE   "whether to build with code obfuscation"      ON)
 option(MACE_ENABLE_CCACHE      "whether to build with ccache"                ON)
 option(MACE_ENABLE_CODE_MODE   "whether to use code mode"                   OFF)
 
+message("CMAKE_VERSION: ${CMAKE_VERSION}")
+message("CROSSTOOL_ROOT: ${CROSSTOOL_ROOT}")
+message("CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
 message("CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+message("MACE_ENABLE_CPU            = ${MACE_ENABLE_CPU}   ")
+message("MACE_ENABLE_NEON           = ${MACE_ENABLE_NEON}   ")
+message("MACE_ENABLE_QUANTIZE       = ${MACE_ENABLE_QUANTIZE}   ")
+message("MACE_ENABLE_OPENCL         = ${MACE_ENABLE_OPENCL}   ")
+message("MACE_ENABLE_CUDA           = ${MACE_ENABLE_CUDA}   ")
+message("MACE_ENABLE_HEXAGON_DSP    = ${MACE_ENABLE_HEXAGON_DSP}   ")
+message("MACE_ENABLE_HEXAGON_HTA    = ${MACE_ENABLE_HEXAGON_HTA}   ")
+message("MACE_ENABLE_MTK_APU        = ${MACE_ENABLE_MTK_APU}   ")
+message("MACE_ENABLE_BFLOAT16       = ${MACE_ENABLE_BFLOAT16}   ")
+message("MACE_ENABLE_FP16           = ${MACE_ENABLE_FP16}   ")
+message("MACE_ENABLE_QNN            = ${MACE_ENABLE_QNN}   ")
+message("MACE_ENABLE_TESTS          = ${MACE_ENABLE_TESTS}   ")
+message("MACE_ENABLE_BENCHMARKS     = ${MACE_ENABLE_BENCHMARKS}   ")
+message("MACE_ENABLE_OPT_SIZE       = ${MACE_ENABLE_OPT_SIZE}   ")
+message("MACE_ENABLE_OBFUSCATE      = ${MACE_ENABLE_OBFUSCATE}   ")
+message("MACE_ENABLE_CCACHE         = ${MACE_ENABLE_CCACHE}   ")
+message("MACE_ENABLE_CODE_MODE      = ${MACE_ENABLE_CODE_MODE}")
+message("MACE_ENABLE_RPCMEM         = ${MACE_ENABLE_RPCMEM}")
+
 
 string(TOLOWER ${CMAKE_SYSTEM_NAME} MACE_OS)
 string(TOLOWER ${CMAKE_SYSTEM_PROCESSOR} MACE_TARGET)
