modified:   mace/tools/CMakeLists.txt 	modified:   mace/tools/ais_inference_hexagon.cc 	modified:   mace/tools/ais_inference_hexagon.h 	new file:   mace/tools/gsd_run.cc

--- a/mace/tools/CMakeLists.txt
+++ b/mace/tools/CMakeLists.txt
@@ -8,6 +8,20 @@ target_link_libraries(mace_run
   extra_link_libs_target
   gflags
 )
+
+file(GLOB MACE_TEST_SRCS
+  ais_inference_hexagon.cc
+  gsd_run.cc
+)
+add_executable(mace_test ${MACE_TEST_SRCS})
+target_link_libraries(mace_test
+  mace_static
+  model
+  extra_link_libs_target
+  gflags
+)
+
+
 if(NOT ANDROID AND NOT QNX)
   target_link_libraries(mace_run)
 endif()
@@ -17,3 +31,13 @@ if(MACE_ENABLE_HEXAGON_DSP)
 endif()
 
 install(TARGETS mace_run RUNTIME DESTINATION bin)
+
+if(NOT ANDROID AND NOT QNX)
+  target_link_libraries(mace_test)
+endif()
+
+if(MACE_ENABLE_HEXAGON_DSP)
+  target_link_libraries(mace_test hexagon_controller)
+endif()
+
+install(TARGETS mace_test RUNTIME DESTINATION bin)
