[Modi]supprt qnn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,14 +128,16 @@ endif(MACE_ENABLE_RPCMEM)
 
 if(MACE_ENABLE_HEXAGON_DSP OR MACE_ENABLE_HEXAGON_HTA)
   set(MACE_ENABLE_HEXAGON ON)
-  if(ANDROID_ABI STREQUAL "arm64-v8a" OR QNX)
+  if (QNN)
+    message("Framework QNN")
+  elseif(ANDROID_ABI STREQUAL "arm64-v8a" OR QNX)
     # Use gold linker to avoid linking check of libcdsprpc.so
     set(MACE_LINKER_FLAGS "${MACE_LINKER_FLAGS} -fuse-ld=gold")
   endif()
 endif(MACE_ENABLE_HEXAGON_DSP OR MACE_ENABLE_HEXAGON_HTA)
 
 if(MACE_ENABLE_HEXAGON_DSP)
-  if(NOT ANDROID AND NOT QNX)
+  if(NOT ANDROID AND NOT QNX AND NOT QNN)
     message(FATAL_ERROR "Hexagon DSP is only supported on Android and Qnx")
   endif()
   add_definitions(-DMACE_ENABLE_RPCMEM)
@@ -156,7 +158,9 @@ if(MACE_ENABLE_MTK_APU)
   endif(NOT ANDROID)
   add_definitions(-DMACE_ENABLE_MTK_APU)
   # Use gold linker to avoid linking check of libapu-platform.so
-  set(MACE_LINKER_FLAGS "${MACE_LINKER_FLAGS} -fuse-ld=gold")
+  if(NOT QNN)
+    set(MACE_LINKER_FLAGS "${MACE_LINKER_FLAGS} -fuse-ld=gold")
+  endif()
 endif(MACE_ENABLE_MTK_APU)
 
 if(MACE_ENABLE_BFLOAT16)
