--- a/mace/port/CMakeLists.txt
+++ b/mace/port/CMakeLists.txt
@@ -22,6 +22,10 @@ elseif(QNX)
   add_subdirectory(posix)
   add_subdirectory(qnx)
   add_library(port ALIAS port_qnx)
+elseif(QNN)
+  add_subdirectory(posix)
+  add_subdirectory(qnx)
+  add_library(port ALIAS port_qnx)
 else(WIN32)
   add_subdirectory(posix)
   add_subdirectory(linux_base)
