[Fix]compile bug

--- a/mace/port/CMakeLists.txt
+++ b/mace/port/CMakeLists.txt
@@ -24,8 +24,8 @@ elseif(QNX)
   add_library(port ALIAS port_qnx)
 elseif(QNN)
   add_subdirectory(posix)
-  add_subdirectory(qnx)
-  add_library(port ALIAS port_qnx)
+  add_subdirectory(qnn)
+  add_library(port ALIAS port_qnn)
 else(WIN32)
   add_subdirectory(posix)
   add_subdirectory(linux_base)
